[package]
name = "pezsc-chain-spec"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
description = "Bizinikiwi chain configurations."
readme = "README.md"
documentation.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { workspace = true, default-features = true }
clap = { features = ["derive"], optional = true, workspace = true }
codec = { features = ["derive"], workspace = true }
docify = { workspace = true }
memmap2 = { workspace = true }
pezsc-chain-spec-derive = { workspace = true, default-features = true }
pezsc-client-api = { workspace = true, default-features = true }
pezsc-executor = { workspace = true, default-features = true }
pezsc-network = { workspace = true, default-features = true }
pezsc-telemetry = { workspace = true, default-features = true }
pezsp-blockchain = { workspace = true, default-features = true }
pezsp-core = { workspace = true, default-features = true }
pezsp-crypto-hashing = { workspace = true, default-features = true }
pezsp-genesis-builder = { workspace = true, default-features = true }
pezsp-io = { workspace = true }
pezsp-runtime = { workspace = true, default-features = true }
pezsp-state-machine = { workspace = true, default-features = true }
pezsp-tracing = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }

[dev-dependencies]
bizinikiwi-test-runtime = { workspace = true }
pezsp-application-crypto = { features = ["serde"], workspace = true }
pezsp-consensus-babe = { features = ["serde"], workspace = true }
pezsp-keyring = { workspace = true, default-features = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }

[features]
runtime-benchmarks = [
	"bizinikiwi-test-runtime/runtime-benchmarks",
	"pezsc-client-api/runtime-benchmarks",
	"pezsc-executor/runtime-benchmarks",
	"pezsc-network/runtime-benchmarks",
	"pezsp-application-crypto/runtime-benchmarks",
	"pezsp-blockchain/runtime-benchmarks",
	"pezsp-consensus-babe/runtime-benchmarks",
	"pezsp-genesis-builder/runtime-benchmarks",
	"pezsp-io/runtime-benchmarks",
	"pezsp-keyring/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
	"pezsp-state-machine/runtime-benchmarks",
]
std = [
	"codec/std",
	"pezsc-client-api/std",
	"pezsc-network/std",
	"pezsc-telemetry/std",
	"pezsp-application-crypto/std",
	"pezsp-blockchain/std",
	"pezsp-consensus-babe/std",
	"pezsp-io/std",
]
try-runtime = [
	"bizinikiwi-test-runtime/try-runtime",
	"pezsc-client-api/try-runtime",
	"pezsc-executor/try-runtime",
	"pezsc-network/try-runtime",
	"pezsp-blockchain/try-runtime",
	"pezsp-consensus-babe/try-runtime",
	"pezsp-genesis-builder/try-runtime",
	"pezsp-keyring/try-runtime",
	"pezsp-runtime/try-runtime",
]
serde = []
with-tracing = []
