[package]
name = "pezsc-cli"
version = "0.36.0"
authors.workspace = true
description = "Bizinikiwi CLI interface."
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { workspace = true, default-features = true }
bip39 = { workspace = true, default-features = true, features = ["rand"] }
chrono = { workspace = true }
clap = { features = ["derive", "string", "wrap_help"], workspace = true }
codec = { workspace = true, default-features = true }
fdlimit = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
libp2p-identity = { features = ["ed25519", "peerid"], workspace = true }
log = { workspace = true, default-features = true }
names = { workspace = true }
pezsc-client-api = { workspace = true, default-features = true }
pezsc-client-db = { workspace = true, default-features = false }
pezsc-keystore = { workspace = true, default-features = true }
pezsc-mixnet = { workspace = true, default-features = true }
pezsc-network = { workspace = true, default-features = true }
pezsc-service = { workspace = true, default-features = false }
pezsc-telemetry = { workspace = true, default-features = true }
pezsc-tracing = { workspace = true, default-features = true }
pezsc-transaction-pool = { workspace = true, default-features = true }
pezsc-utils = { workspace = true, default-features = true }
pezsp-blockchain = { workspace = true, default-features = true }
pezsp-core = { workspace = true, default-features = true }
pezsp-keyring = { workspace = true, default-features = true }
pezsp-keystore = { workspace = true, default-features = true }
pezsp-panic-handler = { workspace = true, default-features = true }
pezsp-runtime = { workspace = true, default-features = true }
pezsp-version = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
regex = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true }
tokio = { features = [
	"parking_lot",
	"rt-multi-thread",
	"signal",
], workspace = true, default-features = true }

[dev-dependencies]
futures-timer = { workspace = true }
pezsp-tracing = { workspace = true, default-features = true }
tempfile = { workspace = true }

[features]
default = ["rocksdb"]
rocksdb = ["pezsc-client-db/rocksdb"]
runtime-benchmarks = [
	"pezsc-client-api/runtime-benchmarks",
	"pezsc-client-db/runtime-benchmarks",
	"pezsc-keystore/runtime-benchmarks",
	"pezsc-mixnet/runtime-benchmarks",
	"pezsc-network/runtime-benchmarks",
	"pezsc-service/runtime-benchmarks",
	"pezsc-tracing/runtime-benchmarks",
	"pezsc-transaction-pool/runtime-benchmarks",
	"pezsp-blockchain/runtime-benchmarks",
	"pezsp-keyring/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
	"pezsp-version/runtime-benchmarks",
]
std = [
	"log/std",
	"pezsc-client-api/std",
	"pezsc-client-db/std",
	"pezsc-keystore/std",
	"pezsc-mixnet/std",
	"pezsc-network/std",
	"pezsc-service/std",
	"pezsc-telemetry/std",
	"pezsc-tracing/std",
	"pezsc-transaction-pool/std",
	"pezsc-utils/std",
	"pezsp-blockchain/std",
	"pezsp-panic-handler/std",
]
try-runtime = [
	"pezsc-client-api/try-runtime",
	"pezsc-client-db/try-runtime",
	"pezsc-mixnet/try-runtime",
	"pezsc-network/try-runtime",
	"pezsc-service/try-runtime",
	"pezsc-tracing/try-runtime",
	"pezsc-transaction-pool/try-runtime",
	"pezsp-blockchain/try-runtime",
	"pezsp-keyring/try-runtime",
	"pezsp-runtime/try-runtime",
	"pezsp-version/try-runtime",
]
serde = []
with-tracing = []
