[package]
name = "pezsc-informant"
version = "0.33.0"
authors.workspace = true
description = "Bizinikiwi informant."
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
console = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
log = { workspace = true, default-features = true }
pezsc-client-api = { workspace = true, default-features = true }
pezsc-network = { workspace = true, default-features = true }
pezsc-network-sync = { workspace = true, default-features = true }
pezsp-blockchain = { workspace = true, default-features = true }
pezsp-runtime = { workspace = true, default-features = true }

[features]
runtime-benchmarks = [
	"pezsc-client-api/runtime-benchmarks",
	"pezsc-network-sync/runtime-benchmarks",
	"pezsc-network/runtime-benchmarks",
	"pezsp-blockchain/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
]
std = [
	"log/std",
	"pezsc-client-api/std",
	"pezsc-network-sync/std",
	"pezsc-network/std",
	"pezsp-blockchain/std",
]
try-runtime = [
	"pezsc-client-api/try-runtime",
	"pezsc-network-sync/try-runtime",
	"pezsc-network/try-runtime",
	"pezsp-blockchain/try-runtime",
	"pezsp-runtime/try-runtime",
]
serde = []
