[package]
name = "pezmmr-gadget"
version = "29.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
description = "MMR Client gadget for bizinikiwi"
homepage.workspace = true
documentation.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { workspace = true, default-features = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
pezsc-client-api = { workspace = true, default-features = true }
pezsc-offchain = { workspace = true, default-features = true }
pezsp-api = { workspace = true, default-features = true }
pezsp-blockchain = { workspace = true, default-features = true }
pezsp-consensus = { workspace = true, default-features = true }
pezsp-consensus-beefy = { workspace = true, default-features = true }
pezsp-core = { workspace = true, default-features = true }
pezsp-mmr-primitives = { workspace = true, default-features = true }
pezsp-runtime = { workspace = true, default-features = true }

[dev-dependencies]
bizinikiwi-test-runtime-client = { workspace = true }
parking_lot = { workspace = true, default-features = true }
pezsc-block-builder = { workspace = true, default-features = true }
pezsp-tracing = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true }

[features]
runtime-benchmarks = [
	"bizinikiwi-test-runtime-client/runtime-benchmarks",
	"pezsc-block-builder/runtime-benchmarks",
	"pezsc-client-api/runtime-benchmarks",
	"pezsc-offchain/runtime-benchmarks",
	"pezsp-api/runtime-benchmarks",
	"pezsp-blockchain/runtime-benchmarks",
	"pezsp-consensus-beefy/runtime-benchmarks",
	"pezsp-consensus/runtime-benchmarks",
	"pezsp-mmr-primitives/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
]
std = [
	"bizinikiwi-test-runtime-client/std",
	"log/std",
	"pezsc-block-builder/std",
	"pezsc-client-api/std",
	"pezsc-offchain/std",
	"pezsp-blockchain/std",
	"pezsp-consensus/std",
]
try-runtime = [
	"bizinikiwi-test-runtime-client/try-runtime",
	"pezsc-block-builder/try-runtime",
	"pezsc-client-api/try-runtime",
	"pezsc-offchain/try-runtime",
	"pezsp-api/try-runtime",
	"pezsp-blockchain/try-runtime",
	"pezsp-consensus-beefy/try-runtime",
	"pezsp-consensus/try-runtime",
	"pezsp-mmr-primitives/try-runtime",
	"pezsp-runtime/try-runtime",
]
serde = []
with-tracing = []
