[package]
description = "Bizinikiwi mixnet service"
name = "pezsc-mixnet"
version = "0.4.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = [
	"Kurdistan Tech Institute <info@pezkuwichain.io>",
	"Parity Technologies <admin@parity.io>",
]
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { workspace = true, default-features = true }
arrayvec = { workspace = true }
blake2 = { workspace = true, default-features = true }
bytes = { workspace = true, default-features = true }
codec = { features = ["derive"], workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
log = { workspace = true, default-features = true }
mixnet = { workspace = true }
parking_lot = { workspace = true, default-features = true }
pezsc-client-api = { workspace = true, default-features = true }
pezsc-network = { workspace = true, default-features = true }
pezsc-network-types = { workspace = true, default-features = true }
pezsc-transaction-pool-api = { workspace = true, default-features = true }
pezsp-api = { workspace = true, default-features = true }
pezsp-consensus = { workspace = true, default-features = true }
pezsp-core = { workspace = true, default-features = true }
pezsp-keystore = { workspace = true, default-features = true }
pezsp-mixnet = { workspace = true, default-features = true }
pezsp-runtime = { workspace = true, default-features = true }
thiserror = { workspace = true }

[features]
runtime-benchmarks = [
	"pezsc-client-api/runtime-benchmarks",
	"pezsc-network/runtime-benchmarks",
	"pezsc-transaction-pool-api/runtime-benchmarks",
	"pezsp-api/runtime-benchmarks",
	"pezsp-consensus/runtime-benchmarks",
	"pezsp-mixnet/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"log/std",
	"pezsc-client-api/std",
	"pezsc-network-types/std",
	"pezsc-network/std",
	"pezsc-transaction-pool-api/std",
	"pezsp-consensus/std",
]
try-runtime = [
	"pezsc-client-api/try-runtime",
	"pezsc-network/try-runtime",
	"pezsc-transaction-pool-api/try-runtime",
	"pezsp-api/try-runtime",
	"pezsp-consensus/try-runtime",
	"pezsp-runtime/try-runtime",
]
serde = []
